# bar library
SET(BOSLIB_src 
${SRCBOSLIB}/acs.for
${SRCBOSLIB}/anldet.f
${SRCBOSLIB}/anlsim.f
${SRCBOSLIB}/aplu.f
${SRCBOSLIB}/arbank.f
${SRCBOSLIB}/asrd.f
${SRCBOSLIB}/bandpr.f
${SRCBOSLIB}/bandsl.f
${SRCBOSLIB}/bcfile.f
${SRCBOSLIB}/bchl.F
${SRCBOSLIB}/bchm.F
${SRCBOSLIB}/bcre.F
${SRCBOSLIB}/bdar.F
${SRCBOSLIB}/bdlg.F
${SRCBOSLIB}/bdlm.F
${SRCBOSLIB}/bdlmx.F
${SRCBOSLIB}/bdlmy.F
${SRCBOSLIB}/bdls.F
${SRCBOSLIB}/bdmp.F
${SRCBOSLIB}/bent.F
${SRCBOSLIB}/bfmt.for
${SRCBOSLIB}/bfrd.for
${SRCBOSLIB}/bfrf.f
${SRCBOSLIB}/bftdir.f
${SRCBOSLIB}/bfun.f
${SRCBOSLIB}/bgac.for
${SRCBOSLIB}/bgar.F
${SRCBOSLIB}/bgarx.F
${SRCBOSLIB}/bgary.F
${SRCBOSLIB}/binlda.F
${SRCBOSLIB}/binp.F
${SRCBOSLIB}/bint1.F
${SRCBOSLIB}/bint.F
${SRCBOSLIB}/bintx.F
${SRCBOSLIB}/binty.F
${SRCBOSLIB}/biolst.F
${SRCBOSLIB}/blna.F
${SRCBOSLIB}/bloada.F
${SRCBOSLIB}/blocda.F
${SRCBOSLIB}/bloc.F
${SRCBOSLIB}/blst.F
${SRCBOSLIB}/bmlt.F
${SRCBOSLIB}/bmltx.F
${SRCBOSLIB}/bmlty.F
${SRCBOSLIB}/bnxt.F
${SRCBOSLIB}/bookch.f
${SRCBOSLIB}/bookee.f
${SRCBOSLIB}/bout.F
${SRCBOSLIB}/boutp.F
${SRCBOSLIB}/bpasda.F
${SRCBOSLIB}/bplu.f
${SRCBOSLIB}/bpos.F
${SRCBOSLIB}/bprint.F
${SRCBOSLIB}/brds.F
${SRCBOSLIB}/breadca.F
${SRCBOSLIB}/breadcc.f
${SRCBOSLIB}/breadc.for
${SRCBOSLIB}/bread.for
${SRCBOSLIB}/breadk.f
${SRCBOSLIB}/breado.F
${SRCBOSLIB}/brnm.F
${SRCBOSLIB}/bruth.F
${SRCBOSLIB}/bsaw.F
${SRCBOSLIB}/bsei.F
${SRCBOSLIB}/bsep.F
${SRCBOSLIB}/bseq.F
${SRCBOSLIB}/bsin.F
${SRCBOSLIB}/bslq.F
${SRCBOSLIB}/bsls.F
${SRCBOSLIB}/bsta.F
${SRCBOSLIB}/bunlda.F
${SRCBOSLIB}/bwrite.for
${SRCBOSLIB}/bwrs.F
${SRCBOSLIB}/cchl.F
${SRCBOSLIB}/ccor.for
${SRCBOSLIB}/ccre.F
${SRCBOSLIB}/ccs.for
${SRCBOSLIB}/cloc.F
${SRCBOSLIB}/CMakeLists.txt
${SRCBOSLIB}/cnxt.F
${SRCBOSLIB}/cread.for
${SRCBOSLIB}/cubder.f
${SRCBOSLIB}/cubspl.f
${SRCBOSLIB}/dada.F
${SRCBOSLIB}/dafr.f
${SRCBOSLIB}/defind.f
${SRCBOSLIB}/defst.for
${SRCBOSLIB}/dida.f
${SRCBOSLIB}/dopart.f
${SRCBOSLIB}/dpeak.for
${SRCBOSLIB}/dump0c.for
${SRCBOSLIB}/epcons.f
${SRCBOSLIB}/gpr.f
${SRCBOSLIB}/gsteer.f
${SRCBOSLIB}/histpr.f
${SRCBOSLIB}/histps.f
${SRCBOSLIB}/hmean.for
${SRCBOSLIB}/iaf.for
${SRCBOSLIB}/ibank.f
${SRCBOSLIB}/ibfl.F
${SRCBOSLIB}/ibln.F
${SRCBOSLIB}/iblnx.F
${SRCBOSLIB}/iblny.F
${SRCBOSLIB}/ibn.f
${SRCBOSLIB}/ilink.f
${SRCBOSLIB}/iloc.F
${SRCBOSLIB}/Incdep.log
${SRCBOSLIB}/indar.F
${SRCBOSLIB}/inddir.f
${SRCBOSLIB}/itabl.f
${SRCBOSLIB}/itoda.for
${SRCBOSLIB}/jbn.f
${SRCBOSLIB}/kbn.f
${SRCBOSLIB}/lbn.f
${SRCBOSLIB}/linall.f
${SRCBOSLIB}/linfil.f
${SRCBOSLIB}/linsel.f
${SRCBOSLIB}/lsbcom.for
${SRCBOSLIB}/lsqspl.f
${SRCBOSLIB}/mbcomt.f
${SRCBOSLIB}/mbos.for
${SRCBOSLIB}/mbpr.for
${SRCBOSLIB}/msgpr.for
${SRCBOSLIB}/npdir.f
${SRCBOSLIB}/pall.f
${SRCBOSLIB}/pcond.for
${SRCBOSLIB}/pcorr.for
${SRCBOSLIB}/pfun.f
${SRCBOSLIB}/phist.for
${SRCBOSLIB}/pmean.for
${SRCBOSLIB}/poda.F
${SRCBOSLIB}/potoeq.f
${SRCBOSLIB}/ppeak.for
${SRCBOSLIB}/priblo.f
${SRCBOSLIB}/pstor.for
${SRCBOSLIB}/ptabl.for
${SRCBOSLIB}/ptext1.f
${SRCBOSLIB}/ptext.for
${SRCBOSLIB}/pvert.for
${SRCBOSLIB}/qmean.for
${SRCBOSLIB}/qpeak.for
${SRCBOSLIB}/qtabl.for
${SRCBOSLIB}/rdda.F
${SRCBOSLIB}/rdvar.for
${SRCBOSLIB}/readfc.f
${SRCBOSLIB}/readff.f
${SRCBOSLIB}/readhl.for
${SRCBOSLIB}/simbos.f
${SRCBOSLIB}/smdist.f
${SRCBOSLIB}/smhist1.f
${SRCBOSLIB}/smhist.f
${SRCBOSLIB}/smmed.f
${SRCBOSLIB}/smoper1.f
${SRCBOSLIB}/smoper.f
${SRCBOSLIB}/smop.f
${SRCBOSLIB}/smopmc.f
${SRCBOSLIB}/smops.f
${SRCBOSLIB}/smpteq.f
${SRCBOSLIB}/smsple.f
${SRCBOSLIB}/smsplw.f
${SRCBOSLIB}/smtwo.f
${SRCBOSLIB}/sort4.for
${SRCBOSLIB}/sortir.for
${SRCBOSLIB}/sortp.f
${SRCBOSLIB}/sortxy.f
${SRCBOSLIB}/splesq.f
${SRCBOSLIB}/splsma.f
${SRCBOSLIB}/splsme.f
${SRCBOSLIB}/splsm.f
${SRCBOSLIB}/splsmw.f
${SRCBOSLIB}/star.for
${SRCBOSLIB}/testwr.for
${SRCBOSLIB}/tocont.for
${SRCBOSLIB}/ucond.for
${SRCBOSLIB}/ucorr.for
${SRCBOSLIB}/uempf.f
${SRCBOSLIB}/uhist.for
${SRCBOSLIB}/ulind.f
${SRCBOSLIB}/umean.for
${SRCBOSLIB}/upatt.f
${SRCBOSLIB}/ustos.for
${SRCBOSLIB}/utabi.for
${SRCBOSLIB}/utabl.for
${SRCBOSLIB}/uwp2.for
${SRCBOSLIB}/uwp.for
${SRCBOSLIB}/vall.for
${SRCBOSLIB}/vecsub.f
${SRCBOSLIB}/vlbn.f
${SRCBOSLIB}/wcond.f
${SRCBOSLIB}/xbins.f
${SRCBOSLIB}/yful.f
${SRCBOSLIB}/ylow.f
${SRCBOSLIB}/ymax.f
${SRCBOSLIB}/zread.f
)
ADD_LIBRARY(${BOSLIBLIB} STATIC ${BOSLIB_src})
