SET(BOSLIB_src
${SRCBOSLIB}/asrd.f
${SRCBOSLIB}/bchl.F
${SRCBOSLIB}/bchm.F
${SRCBOSLIB}/bcre.F
${SRCBOSLIB}/bdar.F
${SRCBOSLIB}/bdlg.F
${SRCBOSLIB}/bdlm.F
${SRCBOSLIB}/bdls.F
${SRCBOSLIB}/bdmp.F
${SRCBOSLIB}/bfmt.for
${SRCBOSLIB}/bfrd.for
${SRCBOSLIB}/bgac.for
${SRCBOSLIB}/bgar.F
${SRCBOSLIB}/binlda.F
${SRCBOSLIB}/binp.F
${SRCBOSLIB}/bint.F
${SRCBOSLIB}/bloada.F
${SRCBOSLIB}/blocda.F
${SRCBOSLIB}/bloc.F
${SRCBOSLIB}/bmlt.F
${SRCBOSLIB}/bnxt.F
${SRCBOSLIB}/boutp.F
${SRCBOSLIB}/bpasda.F
${SRCBOSLIB}/bpos.F
${SRCBOSLIB}/brds.F
${SRCBOSLIB}/breadc.for
${SRCBOSLIB}/bread.for
${SRCBOSLIB}/brnm.F
${SRCBOSLIB}/bsaw.F
${SRCBOSLIB}/bseq.F
${SRCBOSLIB}/bsls.F
${SRCBOSLIB}/bsta.F
${SRCBOSLIB}/bwrite.for
${SRCBOSLIB}/bwrs.F
${SRCBOSLIB}/cchl.F
${SRCBOSLIB}/ccor.for
${SRCBOSLIB}/ccre.F
${SRCBOSLIB}/cloc.F
${SRCBOSLIB}/cnxt.F
${SRCBOSLIB}/cread.for
${SRCBOSLIB}/dada.F
${SRCBOSLIB}/defst.for
${SRCBOSLIB}/histpr.f
${SRCBOSLIB}/iaf.for
${SRCBOSLIB}/ibln.F
${SRCBOSLIB}/indar.F
${SRCBOSLIB}/itoda.for
${SRCBOSLIB}/msgpr.for
${SRCBOSLIB}/pall.f
${SRCBOSLIB}/pcond.for
${SRCBOSLIB}/pcorr.for
${SRCBOSLIB}/phist.for
${SRCBOSLIB}/poda.F
${SRCBOSLIB}/pstor.for
${SRCBOSLIB}/ptabl.for
${SRCBOSLIB}/ptext1.f
${SRCBOSLIB}/pvert.for
${SRCBOSLIB}/rdda.F
${SRCBOSLIB}/rdvar.for
${SRCBOSLIB}/readhl.for
${SRCBOSLIB}/sort4.for
${SRCBOSLIB}/ucorr.for
${SRCBOSLIB}/uhist.for
${SRCBOSLIB}/uwp.for
${SRCBOSLIB}/vall.for
${SRCBOSLIB}/vecsub.f
)
ADD_LIBRARY(${BOSLIBLIB} STATIC ${BOSLIB_src})
