SET(GRAFIX_src
${SRCGRAFIX}/axshow.F
${SRCGRAFIX}/bankls.F
${SRCGRAFIX}/bankpr.F
${SRCGRAFIX}/barsec.f
${SRCGRAFIX}/blnumb.F
${SRCGRAFIX}/blshow.F
${SRCGRAFIX}/calloc.F
${SRCGRAFIX}/capmrk.F
${SRCGRAFIX}/cdst.F
${SRCGRAFIX}/cirdis.F
${SRCGRAFIX}/clrcon.f
${SRCGRAFIX}/coment.f
${SRCGRAFIX}/comwrd.F
${SRCGRAFIX}/convrt.f
${SRCGRAFIX}/credit.F
${SRCGRAFIX}/cricro.f
${SRCGRAFIX}/croax.F
${SRCGRAFIX}/ctdist.F
${SRCGRAFIX}/decide.f
${SRCGRAFIX}/dedxds.F
${SRCGRAFIX}/dedxv1.F
${SRCGRAFIX}/dedxvw.F
${SRCGRAFIX}/defcmd.F
${SRCGRAFIX}/defmac.f
${SRCGRAFIX}/defwrd.f
${SRCGRAFIX}/delmac.f
${SRCGRAFIX}/diaghn.f
${SRCGRAFIX}/diagin.f
${SRCGRAFIX}/disaxi.f
${SRCGRAFIX}/disply.F
${SRCGRAFIX}/dispvc.F
${SRCGRAFIX}/dispzc.F
${SRCGRAFIX}/dnum.f
${SRCGRAFIX}/dracap.f
${SRCGRAFIX}/dramov.f
${SRCGRAFIX}/drawbp.F
${SRCGRAFIX}/drawer.F
${SRCGRAFIX}/drawfd.F
${SRCGRAFIX}/drawid.F
${SRCGRAFIX}/drawlg.F
${SRCGRAFIX}/drawmu.f
${SRCGRAFIX}/drawpi.f
${SRCGRAFIX}/drawvc.F
${SRCGRAFIX}/drawzc.F
${SRCGRAFIX}/drftim.f
${SRCGRAFIX}/drhatc.F
${SRCGRAFIX}/drvcrd.F
${SRCGRAFIX}/drwhit.F
${SRCGRAFIX}/dsfadc.F
${SRCGRAFIX}/dsvac.F
${SRCGRAFIX}/dthcv1.f
${SRCGRAFIX}/ecapcy.F
${SRCGRAFIX}/ecap.F
${SRCGRAFIX}/ecaps.F
${SRCGRAFIX}/edimac.f
${SRCGRAFIX}/edvp.F
${SRCGRAFIX}/efmass.F
${SRCGRAFIX}/ellips.f
${SRCGRAFIX}/endmes.F
${SRCGRAFIX}/evdisp.F
${SRCGRAFIX}/evtax.F
${SRCGRAFIX}/expmac.f
${SRCGRAFIX}/fadcax.F
${SRCGRAFIX}/faddrw.f
${SRCGRAFIX}/fampds.F
${SRCGRAFIX}/fampft.F
${SRCGRAFIX}/ficoor.F
${SRCGRAFIX}/ficoov.F
${SRCGRAFIX}/finabr.f
${SRCGRAFIX}/fincmd.f
${SRCGRAFIX}/finwrd.f
${SRCGRAFIX}/ftdlho.F
${SRCGRAFIX}/fw83.F
${SRCGRAFIX}/fwc83.F
${SRCGRAFIX}/fwcap.F
${SRCGRAFIX}/fwchev.F
${SRCGRAFIX}/fwdisp.F
${SRCGRAFIX}/fwmucn.F
${SRCGRAFIX}/fwmuht.F
${SRCGRAFIX}/fwnew.F
${SRCGRAFIX}/fyrint.f
${SRCGRAFIX}/gamdis.F
${SRCGRAFIX}/gmtext.F
${SRCGRAFIX}/gvtxft.F
${SRCGRAFIX}/heldis.F
${SRCGRAFIX}/helpli.f
${SRCGRAFIX}/helpus.f
${SRCGRAFIX}/hemsym.f
${SRCGRAFIX}/hitdsp.F
${SRCGRAFIX}/hitmrk.F
${SRCGRAFIX}/hitpnt.F
${SRCGRAFIX}/hitscl.f
${SRCGRAFIX}/hlpmac.f
${SRCGRAFIX}/hodrfi.F
${SRCGRAFIX}/idfun.f
${SRCGRAFIX}/j68kds.F
${SRCGRAFIX}/jadarg.f
${SRCGRAFIX}/jadcmd.f
${SRCGRAFIX}/jadisp.F
${SRCGRAFIX}/joys.F
${SRCGRAFIX}/komman.F
${SRCGRAFIX}/koord.F
${SRCGRAFIX}/lgclst.F
${SRCGRAFIX}/lindis.F
${SRCGRAFIX}/locmac.f
${SRCGRAFIX}/mcgjet.f
${SRCGRAFIX}/menu.f
${SRCGRAFIX}/more.F
${SRCGRAFIX}/muldsp.F
${SRCGRAFIX}/mur2ds.F
${SRCGRAFIX}/n50sds.F
${SRCGRAFIX}/newcal.F
${SRCGRAFIX}/newcap.F
${SRCGRAFIX}/news.f
${SRCGRAFIX}/notice.f
${SRCGRAFIX}/numbwr.F
${SRCGRAFIX}/pardis.F
${SRCGRAFIX}/pbgcyl.F
${SRCGRAFIX}/pbgrfi.F
${SRCGRAFIX}/pbgrz.F
${SRCGRAFIX}/pbgsum.F
${SRCGRAFIX}/phnumb.F
${SRCGRAFIX}/pick.F
${SRCGRAFIX}/plygon.f
${SRCGRAFIX}/pratof.F
${SRCGRAFIX}/predit.F
${SRCGRAFIX}/prj68k.f
${SRCGRAFIX}/prmprs.F
${SRCGRAFIX}/prn50s.F
${SRCGRAFIX}/profil.f
${SRCGRAFIX}/projec.F
${SRCGRAFIX}/projvw.F
${SRCGRAFIX}/prompt.f
${SRCGRAFIX}/prtpev.F
${SRCGRAFIX}/prtptr.F
${SRCGRAFIX}/prtpvx.F
${SRCGRAFIX}/przvtx.F
${SRCGRAFIX}/qplots.F
${SRCGRAFIX}/ralloc.F
${SRCGRAFIX}/realnm.f
${SRCGRAFIX}/rectan.f
${SRCGRAFIX}/renmac.f
${SRCGRAFIX}/resmac.f
${SRCGRAFIX}/retten.F
${SRCGRAFIX}/rsdisp.F
${SRCGRAFIX}/rutrck.F
${SRCGRAFIX}/rzdraw.F
${SRCGRAFIX}/rzhits.F
${SRCGRAFIX}/rzroll.F
${SRCGRAFIX}/rztrck.F
${SRCGRAFIX}/saege.F
${SRCGRAFIX}/scannr.F
${SRCGRAFIX}/sepcmd.f
${SRCGRAFIX}/setcmd.f
${SRCGRAFIX}/setdef.F
${SRCGRAFIX}/setscl.F
${SRCGRAFIX}/setupg.F
${SRCGRAFIX}/spare.f
${SRCGRAFIX}/spthak.F
${SRCGRAFIX}/stplst.F
${SRCGRAFIX}/tbgdis.F
${SRCGRAFIX}/ternum.f
${SRCGRAFIX}/tofds.F
${SRCGRAFIX}/tonum.f
${SRCGRAFIX}/tr3dsp.F
${SRCGRAFIX}/trig2.F
${SRCGRAFIX}/trkhit.F
${SRCGRAFIX}/trkrol.F
${SRCGRAFIX}/trn4v.F
${SRCGRAFIX}/trnumb.F
${SRCGRAFIX}/trpvtx.F
${SRCGRAFIX}/trtext.F
${SRCGRAFIX}/truth.F
${SRCGRAFIX}/vcdo.F
${SRCGRAFIX}/vrxcir.F
${SRCGRAFIX}/vtx.F
${SRCGRAFIX}/vtx.F
${SRCGRAFIX}/vxdisp.F
${SRCGRAFIX}/walloc.F
${SRCGRAFIX}/welcme.f
${SRCGRAFIX}/xcalcor.F
${SRCGRAFIX}/xsafchk.F
${SRCGRAFIX}/xtofvw.F
${SRCGRAFIX}/xxxyyy.F
${SRCGRAFIX}/xytag.F
${SRCGRAFIX}/yamada.F
${SRCGRAFIX}/zfitds.F
${SRCGRAFIX}/zfit.F
${SRCGRAFIX}/zinter.F
${SRCGRAFIX}/ztrgvw.F
${SRCGRAFIX}/grblock.F

)
ADD_LIBRARY(${GRAFIXLIB} grafix ${GRAFIX_src})
