SET(JADEGS_src
${SRCJADEGS}/akop.F
${SRCJADEGS}/alphan.F
${SRCJADEGS}/amps2z.F
${SRCJADEGS}/change.F
${SRCJADEGS}/cl2prc.f
${SRCJADEGS}/cnewid.F
${SRCJADEGS}/dedxbk.F
${SRCJADEGS}/dedxbn.F
${SRCJADEGS}/distxy.F
${SRCJADEGS}/drpipe.F
${SRCJADEGS}/drtrck.F
${SRCJADEGS}/dserr.f
${SRCJADEGS}/dxmcsp.f
${SRCJADEGS}/dxmcss.f
${SRCJADEGS}/ebeam.F
${SRCJADEGS}/eigen.f
${SRCJADEGS}/ergtot.F
${SRCJADEGS}/errmom.F
${SRCJADEGS}/errprt.F
${SRCJADEGS}/evbkpr.F
${SRCJADEGS}/evrea1.f
${SRCJADEGS}/evread.F
${SRCJADEGS}/evwrit9.F
${SRCJADEGS}/exjhtl.F
${SRCJADEGS}/fampco.F
${SRCJADEGS}/getds.f
${SRCJADEGS}/getint.f
${SRCJADEGS}/hprs.f
${SRCJADEGS}/idattm.f
${SRCJADEGS}/izt2rn.f
${SRCJADEGS}/jadebd.F
${SRCJADEGS}/jegain.f
${SRCJADEGS}/jetcal.F
${SRCJADEGS}/jfetch.F
${SRCJADEGS}/jftnew.F
${SRCJADEGS}/jrecal.F
${SRCJADEGS}/kalibr.f
${SRCJADEGS}/klread.F
${SRCJADEGS}/ktmcon.F
${SRCJADEGS}/ldatyp.f
${SRCJADEGS}/linkds.f
${SRCJADEGS}/locfld.f
${SRCJADEGS}/loc.f
${SRCJADEGS}/mchtrb.F
${SRCJADEGS}/mctr4v.F
${SRCJADEGS}/mctrcb.F
${SRCJADEGS}/messag.F
${SRCJADEGS}/mofrci.f
${SRCJADEGS}/momenp.F
${SRCJADEGS}/moment.F
${SRCJADEGS}/momgam.F
${SRCJADEGS}/n50sco.F
${SRCJADEGS}/numfun.f
${SRCJADEGS}/nvert.f
${SRCJADEGS}/opunit.F
${SRCJADEGS}/parmin.f
${SRCJADEGS}/pragai.f
${SRCJADEGS}/prstat.F
${SRCJADEGS}/rbpipe.F
${SRCJADEGS}/rdalgn.F
${SRCJADEGS}/rddate.F
${SRCJADEGS}/rdddcl.f
${SRCJADEGS}/rddoub.f
${SRCJADEGS}/rddouv.F
${SRCJADEGS}/rdhead.f
${SRCJADEGS}/rdiefv.F
${SRCJADEGS}/rdinef.f
${SRCJADEGS}/rdmerg.f
${SRCJADEGS}/rdmodn.F
${SRCJADEGS}/rdmodv.F
${SRCJADEGS}/rdmrgv.f
${SRCJADEGS}/rdmtco9.F
${SRCJADEGS}/rdpatr.F
${SRCJADEGS}/rdpoin.f
${SRCJADEGS}/rdpoiv.f
${SRCJADEGS}/rdrdmh.f
${SRCJADEGS}/rdreso.F
${SRCJADEGS}/rdresv.F
${SRCJADEGS}/rdrnhv.F
${SRCJADEGS}/rdtrg1.f
${SRCJADEGS}/rdtrg2.f
${SRCJADEGS}/rdtrig.F
${SRCJADEGS}/runfix.F
${SRCJADEGS}/safchk.f
${SRCJADEGS}/shell9.F
${SRCJADEGS}/sminvd.f
${SRCJADEGS}/sphrcy.f
${SRCJADEGS}/spinnr.f
${SRCJADEGS}/sqtval.F
${SRCJADEGS}/superv.F
${SRCJADEGS}/symin.f
${SRCJADEGS}/thrunb.F
${SRCJADEGS}/thrust.F
${SRCJADEGS}/tofbk.f
${SRCJADEGS}/track.F
${SRCJADEGS}/treltr.F
${SRCJADEGS}/vertex.f
${SRCJADEGS}/vrtpos.f
${SRCJADEGS}/vtm.f
${SRCJADEGS}/vtxaft.f
${SRCJADEGS}/vtxbnk.F
${SRCJADEGS}/vtxee.f
${SRCJADEGS}/vtxini.f
${SRCJADEGS}/vtxpnt.f
${SRCJADEGS}/vtxpre.F
${SRCJADEGS}/vtxsrc.f
${SRCJADEGS}/xbpipe.F
${SRCJADEGS}/xyblk.F
${SRCJADEGS}/zcass.f
${SRCJADEGS}/zcdata.f
${SRCJADEGS}/zcftnw.F
${SRCJADEGS}/zchcal.f
${SRCJADEGS}/zcoor.f
${SRCJADEGS}/zextra.f
${SRCJADEGS}/zsfit.F
${SRCJADEGS}/zsline.F
${SRCJADEGS}/zspdbk.f
${SRCJADEGS}/zspur.F
${SRCJADEGS}/zsrft1.F
${SRCJADEGS}/zsrftv.F
${SRCJADEGS}/zsxy.F
${SRCJADEGS}/zvertf.F
${SRCJADEGS}/zrecal.F
${SRCJADEGS}/zbug.f
)
#NOTE, PMF contains a bug? here zrecal.F and zbug.g is taken from zebra

ADD_LIBRARY(${JADEGSLIB} jadegs ${JADEGS_src})
