SET(JADEMUS_src
${SRCJADEMUS}/mu2pul.f
${SRCJADEMUS}/muanab.F
${SRCJADEMUS}/muanac.F
${SRCJADEMUS}/muanaf.F
${SRCJADEMUS}/muana.f
${SRCJADEMUS}/mucon.F
${SRCJADEMUS}/muconw.F
${SRCJADEMUS}/mucoor.F
${SRCJADEMUS}/mucuts.F
${SRCJADEMUS}/mudchk.F
${SRCJADEMUS}/mudump.F
${SRCJADEMUS}/muendp.F
${SRCJADEMUS}/muerry.f
${SRCJADEMUS}/mufflb.F
${SRCJADEMUS}/muffle.F
${SRCJADEMUS}/mufflr.F
${SRCJADEMUS}/muffls.F
${SRCJADEMUS}/mufflt.F
${SRCJADEMUS}/mufflx.F
${SRCJADEMUS}/muffly.F
${SRCJADEMUS}/mufflz.F
${SRCJADEMUS}/mufini.F
${SRCJADEMUS}/mufmat.F
${SRCJADEMUS}/mufsta.F
${SRCJADEMUS}/muhdsp.F
${SRCJADEMUS}/muhit.F
${SRCJADEMUS}/muhits.F
${SRCJADEMUS}/muini.F
${SRCJADEMUS}/muloch.F
${SRCJADEMUS}/mumess.f
${SRCJADEMUS}/muons.F
${SRCJADEMUS}/mupic.F
${SRCJADEMUS}/muregm.f
${SRCJADEMUS}/mureg.F
${SRCJADEMUS}/muregs.f
${SRCJADEMUS}/muregy.F
${SRCJADEMUS}/musafe.f
${SRCJADEMUS}/muwire.F
${SRCJADEMUS}/tanthm.F
${SRCJADEMUS}/xymud.F
)
ADD_LIBRARY(${JADEMUSLIB} jademus ${JADEMUS_src})
