SET(JMC_src
${SRCJMC}/actof.f
${SRCJMC}/brvect.F
${SRCJMC}/datemc.f
${SRCJMC}/eepair.f
${SRCJMC}/endclg.f
${SRCJMC}/errmsg.F
${SRCJMC}/evtini.f
${SRCJMC}/fcrang.f
${SRCJMC}/hdecls.f
${SRCJMC}/inifwd.f
${SRCJMC}/inttof.f
${SRCJMC}/jchamb.f
${SRCJMC}/jdtime.f
${SRCJMC}/jeloss.f
${SRCJMC}/jftest.f
${SRCJMC}/jgetev.f
${SRCJMC}/jgetvc.f
${SRCJMC}/jhitin.f
${SRCJMC}/jinit.f
${SRCJMC}/jipatr.f
${SRCJMC}/jmulsc.f
${SRCJMC}/jprabs.f
${SRCJMC}/jprfre.f
${SRCJMC}/jprthi.f
${SRCJMC}/jprtlo.f
${SRCJMC}/jrchck.f
${SRCJMC}/jring.f
${SRCJMC}/jspoin.f
${SRCJMC}/jstep.f
${SRCJMC}/jstore.f
${SRCJMC}/jtrapz.f
${SRCJMC}/jtrkgm.f
${SRCJMC}/jtrntr.f
${SRCJMC}/jvdtim.f
${SRCJMC}/jvtxch.f
${SRCJMC}/limint.F
${SRCJMC}/mchist.f
${SRCJMC}/mcnews.f
${SRCJMC}/mctagb.f
${SRCJMC}/mctagc.f
${SRCJMC}/mctage.f
${SRCJMC}/mctagf.f
${SRCJMC}/mctagi.F
${SRCJMC}/mctagm.F
${SRCJMC}/mctagr.F
${SRCJMC}/mctags.F
${SRCJMC}/mcvali.F
${SRCJMC}/mcverr.f
${SRCJMC}/mcvsum.f
${SRCJMC}/muconm.f
${SRCJMC}/muordr.f
${SRCJMC}/murtne.f
${SRCJMC}/ordlg.f
${SRCJMC}/pikmuf.f
${SRCJMC}/plligd.f
${SRCJMC}/radiat.f
${SRCJMC}/rncont.f
${SRCJMC}/rnexp0.f
${SRCJMC}/rngau.f
${SRCJMC}/rtmi.f
${SRCJMC}/setbpc.f
${SRCJMC}/settof.f
${SRCJMC}/showr.f
${SRCJMC}/stalgn.f
${SRCJMC}/statag.F
${SRCJMC}/statbp.f
${SRCJMC}/sthead.f
${SRCJMC}/stlatc.f
${SRCJMC}/stpall.F
${SRCJMC}/stvect.F
${SRCJMC}/svect1.f
${SRCJMC}/tags2h.F
${SRCJMC}/tags2h.F
${SRCJMC}/tofmak.f
${SRCJMC}/trcdet.f
${SRCJMC}/trcdtv.f
${SRCJMC}/trcoil.f
${SRCJMC}/trkadc.f
${SRCJMC}/trkgam.f
${SRCJMC}/trkgmv.f
${SRCJMC}/trlgl.f
${SRCJMC}/trlgs6.F
${SRCJMC}/trlgsh.F
${SRCJMC}/wegas.f
${SRCJMC}/wrtmcb.f
)
ADD_LIBRARY(${JMCLIB} STATIC ${JMC_src})
