SET(PATRECSR_src
${SRCPATRECSR}/adpatr.F
${SRCPATRECSR}/backtr.F
${SRCPATRECSR}/bakfit.F
${SRCPATRECSR}/bakpak.F
${SRCPATRECSR}/bside.F
${SRCPATRECSR}/bstore.F
${SRCPATRECSR}/crtrel.F
${SRCPATRECSR}/deadcl.f
${SRCPATRECSR}/errorm.F
${SRCPATRECSR}/flinel.F
${SRCPATRECSR}/ftrkel.F
${SRCPATRECSR}/fxyz.F
${SRCPATRECSR}/inpatc.F
${SRCPATRECSR}/inpatr.F
${SRCPATRECSR}/kntrel.F
${SRCPATRECSR}/patrc1.F
${SRCPATRECSR}/patrec.F
${SRCPATRECSR}/patrol.F
${SRCPATRECSR}/pcwork.F
${SRCPATRECSR}/prhtar.F
${SRCPATRECSR}/rincon.F
${SRCPATRECSR}/rstbtr.F
${SRCPATRECSR}/srtrel.F
${SRCPATRECSR}/trlord.F
${SRCPATRECSR}/xyfit.F
${SRCPATRECSR}/zrfit.F
)
ADD_LIBRARY(${PATRECSRLIB} STATIC ${PATRECSR_src})
