SET(SOURCE_src
${SRCSOURCE}/angbar.f
${SRCSOURCE}/bbcorr.F
${SRCSOURCE}/bbleak.F
${SRCSOURCE}/brlgn6.f
${SRCSOURCE}/brlgn.F
${SRCSOURCE}/calcor.F
${SRCSOURCE}/elgobs.f
${SRCSOURCE}/encorr.F
${SRCSOURCE}/englos.f
${SRCSOURCE}/enlosg.f
${SRCSOURCE}/ilctrc.f
${SRCSOURCE}/intolg.F
${SRCSOURCE}/lganal9.F
${SRCSOURCE}/lgavde.f
${SRCSOURCE}/lgavdp.f
${SRCSOURCE}/lgbadc.F
${SRCSOURCE}/lgbfil.F
${SRCSOURCE}/lgbhit.f
${SRCSOURCE}/lgbtdc.F
${SRCSOURCE}/lgcalb.F
${SRCSOURCE}/lgcctl.F
${SRCSOURCE}/lgcdir9.F
${SRCSOURCE}/lgchc2.F
${SRCSOURCE}/lgclpb9.F
${SRCSOURCE}/lgclpc.F
${SRCSOURCE}/lgclus.F
${SRCSOURCE}/lgcrn2.f
${SRCSOURCE}/lgcrnr.f
${SRCSOURCE}/lgdcpy.F
${SRCSOURCE}/lgdead.f
${SRCSOURCE}/lgecor9.F
${SRCSOURCE}/lgeerr.f
${SRCSOURCE}/lgefil.F
${SRCSOURCE}/lgehit.f
${SRCSOURCE}/lgeign.F
${SRCSOURCE}/lgerse.F
${SRCSOURCE}/lgesmr.f
${SRCSOURCE}/lginit.f
${SRCSOURCE}/lgmesg.F
${SRCSOURCE}/lgnbls.f
${SRCSOURCE}/lgnmec.f
${SRCSOURCE}/lgrein.F
${SRCSOURCE}/lgsrth.F
${SRCSOURCE}/lgsubc.f
${SRCSOURCE}/lgthcr.f
${SRCSOURCE}/lkcorr.F
${SRCSOURCE}/posend.f
${SRCSOURCE}/shmax.f
${SRCSOURCE}/thcofa.F
${SRCSOURCE}/thcorr.F
${SRCSOURCE}/tpcnst.F
)
ADD_LIBRARY(${SOURCELIB} source ${SOURCE_src})
