SET(ZLIB_src
${SRCZLIB}/chien52.F
${SRCZLIB}/chien5.F
${SRCZLIB}/crdoca.f
${SRCZLIB}/dxmcgn.f
${SRCZLIB}/ealgcl.F
${SRCZLIB}/eamcde.f
${SRCZLIB}/eaunin.f
${SRCZLIB}/eazero.f
${SRCZLIB}/ekand.f
${SRCZLIB}/expect.F
${SRCZLIB}/fehler.f
${SRCZLIB}/irnevt.f
${SRCZLIB}/jobfin.f
${SRCZLIB}/prallb.f
${SRCZLIB}/prlist.f
${SRCZLIB}/prsinb.f
${SRCZLIB}/prtoci.f
${SRCZLIB}/shado9.F
${SRCZLIB}/shwcpr.f
${SRCZLIB}/trkbl9.F
${SRCZLIB}/trkbse.F
${SRCZLIB}/ze4vdp.f
${SRCZLIB}/ze4vea.f
${SRCZLIB}/ze4vet2.f
${SRCZLIB}/ze4vet.f
${SRCZLIB}/ze4vet.f
${SRCZLIB}/ze4vmc.f
${SRCZLIB}/ze4vpk.for
${SRCZLIB}/ze4vtp.f
${SRCZLIB}/ze4vun.f
${SRCZLIB}/ze4vvx.F
${SRCZLIB}/zmcredu.f
${SRCZLIB}/zsphrcy.f
${SRCZLIB}/zspthak.f
)
ADD_LIBRARY(${ZLIBLIB} zlib ${ZLIB_src})
